k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-service
spec:
  type: NodePort
  selector:
    app: static-web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
